@@ -1,5 +1,9 @@
 post-v1.11.0
 ---------------------
+    - OpenFlow:
+      * New support for matching outer source and destination IP address
+        of tunneled packets, for tunnel ports configured with the newly
+	added "remote_ip=flow" and "local_ip=flow" options.
 
 
 v1.11.0 - xx xxx xxxx
